--- a/index.html
+++ b/index.html
@@ -1,72 +1,149 @@
 <!DOCTYPE html>
 <!-- http://themes.alessioatzeni.com/html/chakra/dark/index.html --!>
 <html>
-  <head>
-    <title>Titolo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
-    <link href="css/page.css" rel="stylesheet" media="screen">
-    <link href="css/home.css" rel="stylesheet" media="screen">
+    <head>
+        <title>Domenico Luciani - Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
+        <link href="css/page.css" rel="stylesheet" media="screen">
+        <link href="css/home.css" rel="stylesheet" media="screen">
+        <link href="css/about.css" rel="stylesheet" media="screen">
+        <link href="css/skills.css" rel="stylesheet" media="screen">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="../../assets/js/html5shiv.js"></script>
+          <script src="../../assets/js/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <header>
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Domenico Leone Luciani</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Domenico Luciani - Portfolio</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#social">Social</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#social">Social</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
-      </nav> 
-    </header>
-    <div id="home" class="page">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="title-page">
-              <h2 class="title">Home</h2>
-              <h3 class="title-description">Here start everything</h3>
+        </nav>
+        </header>
+        <div id="home" class="page">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="img/pic.jpg"></img>
+                    </div>
+                    <div class="col-md-6 ">
+                        <div id="hi">
+                            <h1 class="title">Hello there!</h1>
+                            <h2 class="title-description">I'm <strong>Domenico Luciani</strong></h2>
+                            <h3 class="title-description"> but you can call me <strong>DLion</strong></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 ">
+                        <div id="riassunto">
+                            <p class="lead text-center">Geek, developer,compulsive coder and curious coffe addicted.</p>
+                            <p class="lead text-center">I have some knowledge of many languages and I am a Linux fanatic.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-    <div id="about" class="page-alternate">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="title-page">
-              <h2 class="title">About</h2>
+        <div id="about" class="page-alternate" >
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="title-page">
+                            <h2 class="title">About me</h2>
+                            <h3 class="title-description">Who I am</h3>
+                            <p>Appassionate student, web developer and Linux maniac.</p>
+                            <p>I live in Palermo, Sicily and I currently work as Web Developer and SysAdmin.</p>
+                            <p>I am an appassionate of many technologies and I develop in many languages like C, PHP, bash, node.js and sometimes Java and C# too.</p>
+                            <p>Currently I'm studying Computer Science.</p>
+                            <p>I like to discovery new thing about everything.</p>
+                            <p>I have a Raspberry Pi, I like Computer Vision and use OpenCV Libraries.</p>
+                            <p>Right now, I'm studying Node.js and MongoDB to wrote webapplications using javascript and NoSQL databases.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+        <div id="skills" class="page" >
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="title-page">
+                            <h2 class="title">Skills</h2>
+                            <h3 class="title-description">What I can do</h3>
+                           <div class="legend">
+                               <h1>Legend:</h1>
+                                <div class="skills">
+                                    <ul>
+                                        <li class="jq">JavaScript</li>
+                                        <li class="css">CSS3</li>
+                                        <li class="html">HTML5</li>
+                                        <li class="php">PHP</li>
+                                        <li class="sql">MySQL</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div id="diagram"></div>
+                            <div class="get">
+                                <div class="arc">
+                                    <span class="text">JavaScript</span>
+                                    <input type="hidden" class="percent" value="95" />
+                                    <input type="hidden" class="color" value="#97BE0D" />
+                                </div>
+                                <div class="arc">
+                                    <span class="text">CSS3</span>
+                                    <input type="hidden" class="percent" value="90" />
+                                    <input type="hidden" class="color" value="#D84F5F" />
+                                </div>
+                                <div class="arc">
+                                    <span class="text">HTML5</span>
+                                    <input type="hidden" class="percent" value="80" />
+                                    <input type="hidden" class="color" value="#88B8E6" />
+                                </div>
+                                <div class="arc">
+                                    <span class="text">PHP</span>
+                                    <input type="hidden" class="percent" value="53" />
+                                    <input type="hidden" class="color" value="#BEDBE9" />
+                                </div>
+                                <div class="arc">
+                                    <span class="text">MySQL</span>
+                                    <input type="hidden" class="percent" value="45" />
+                                    <input type="hidden" class="color" value="#EDEBEE" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="http://tympanus.net/Tutorials/AnimatedSkillsDiagram/js/jquery.js" type="text/javascript"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/raphael-min.js"></script>
+        <!-- My Magic file !-->
+        <script src="js/magic.js"></script>
+    </body>
 </html>
