--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                 </div>
             </div>
         </div>
-        <div id="skills" class="page" >
+        <div id="skills" class="page">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="title-page">
                             <h2 class="title">Skills</h2>
                             <h3 class="title-description">What I can do</h3>
-                           <div class="legend">
+                            <div class="legend">
                                 <div class="skills">
                                     <ul>
                                         <li class="php">PHP</li>
@@ -140,6 +140,38 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Linux</h3>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            </div>
+                        </div>
+                        <h3>Windows</h3>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Tools</h3>
+                        <span class="label label-danger">Vim</span>
+                        <span class="label label-danger">Git</span>
+                        <span class="label label-danger">Nmap</span>
+                        <span class="label label-danger">Ssh</span>
+                        <span class="label label-danger">Screen</span>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Libraries/Frameworks</h1>
+                        <span class="label label-danger">OpenCV</span>
+                        <span class="label label-danger">MongoDB</span>
+                        <span class="label label-danger">PDO</span>
+                        <span class="label label-danger">Mongoose.js</span>
+                        <span class="label label-danger">Express.js</span>
                     </div>
                 </div>
             </div>
