--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="row">
                     <div class="col-md-12 ">
                         <div id="riassunto">
-                            <p class="lead text-center">Geek, developer,compulsive coder and curious coffe addicted.</p>
+                            <p class="lead text-center">Geek, developer,compulsive coder and curious coffee addicted.</p>
                             <p class="lead text-center">I have some knowledge of many languages and I am a Linux fanatic.</p>
                         </div>
                     </div>
@@ -72,15 +72,15 @@
                     <div class="col-md-12">
                         <div class="title-page">
                             <h2 class="title">About me</h2>
-                            <h3 class="title-description">Who I am</h3>
+                            <h3 class="title-description">Who am I</h3>
                             <div id="who">
-                                <p>Appassionate student, web developer and Linux maniac.</p>
-                                <p>I live in Palermo, Sicily and I currently work as Web Developer and SysAdmin.</p>
-                                <p>I am an appassionate of many technologies and I develop in many languages like C, PHP, bash, node.js and sometimes Java and C# too.</p>
-                                <p>Currently I'm studying Computer Science.</p>
-                                <p>I like to discovery new thing about everything.</p>
-                                <p>I have a Raspberry Pi, I like Computer Vision and use OpenCV Libraries.</p>
-                                <p>Right now, I'm studying Node.js and MongoDB to wrote webapplications using javascript and NoSQL databases.</p>
+                                <p>Enthusiastic student, web developer and Linux maniac.</p>
+                                <p>I live in Palermo, Sicily, and I currently work as Web Developer and SysAdmin.</p>
+                                <p>Technologies aficionado, I develop in many languages like C, PHP, bash, node.js and sometimes Java and C# as well.</p>
+                                <p>I'm currently studying Computer Science.</p>
+                                <p>I like to discover new things about everything.</p>
+                                <p>I have a Raspberry Pi, I like Computer Vision and I use OpenCV Libraries.</p>
+                                <p>Right now, I'm studying Node.js and MongoDB to write Webapplications using javascript and NoSQL databases.</p>
                             </div>
                         </div>
                     </div>
@@ -94,62 +94,80 @@
                         <div class="title-page">
                             <h2 class="title">Skills</h2>
                             <h3 class="title-description">What I can do</h3>
-                            <div class="legend">
-                                <div class="skills">
-                                    <ul>
-                                        <li class="php">PHP</li>
-                                        <li class="sql">SQL</li>
-                                        <li class="nodejs">Node.js</li>
-                                        <li class="bash">Bash</li>
-                                        <li class="c">C</li>
-                                        <li class="java">Java</li>
-                                    </ul>
-                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                	<div class="col-md-12">
+                		<h3>Languages</h3>
+                        <div class="legend">
+                            <div class="skills">
+                                <ul>
+                                    <li class="php">PHP</li>
+                                    <li class="sql">SQL</li>
+                                    <li class="c">C</li>
+                                    <li class="bash">Bash</li>
+                                    <li class="nodejs">Node.js</li>
+                                    <li class="java">Java</li>
+                                    <li class="csh">C#</li>
+                                    <li class="assembly">Assembly</li>
+                                </ul>
                             </div>
-                            <div id="diagram"></div>
-                            <div class="get">
-                                <div class="arc">
-                                    <span class="text">PHP</span>
-                                    <input type="hidden" class="percent" value="95" />
-                                    <input type="hidden" class="color" value="#1abc9c" />
-                                </div>
-                                <div class="arc">
-                                    <span class="text">SQL</span>
-                                    <input type="hidden" class="percent" value="88" />
-                                    <input type="hidden" class="color" value="#2ecc71" />
-                                </div>
-                                <div class="arc">
-                                    <span class="text">Node.js</span>
-                                    <input type="hidden" class="percent" value="70" />
-                                    <input type="hidden" class="color" value="#f1c40f" />
-                                </div>
-                                <div class="arc">
-                                    <span class="text">Bash</span>
-                                    <input type="hidden" class="percent" value="75" />
-                                    <input type="hidden" class="color" value="#9b59b6" />
-                                </div>
-                                <div class="arc">
-                                    <span class="text">C</span>
-                                    <input type="hidden" class="percent" value="90" />
-                                    <input type="hidden" class="color" value="#e74c3c" />
-                                </div>
-                                <div class="arc">
-                                    <span class="text">Java</span>
-                                    <input type="hidden" class="percent" value="45" />
-                                    <input type="hidden" class="color" value="#2980b9" />
-                                </div>
+                        </div>
+                        <div id="diagram"></div>
+                        <div class="get">
+                        	<div class="arc">
+                                <span class="text">PHP</span>
+                                <input type="hidden" class="percent" value="95" />
+                                <input type="hidden" class="color" value="#1abc9c" />
+                            </div>
+                            <div class="arc">
+                                <span class="text">C</span>
+                                <input type="hidden" class="percent" value="90" />
+                                <input type="hidden" class="color" value="#e74c3c" />
+                            </div>
+                            <div class="arc">
+                                <span class="text">SQL</span>
+                                <input type="hidden" class="percent" value="88" />
+                                <input type="hidden" class="color" value="#2ecc71" />
+                            </div>
+                            <div class="arc">
+                                <span class="text">Bash</span>
+                                <input type="hidden" class="percent" value="75" />
+                                <input type="hidden" class="color" value="#9b59b6" />
+                            </div>
+                            <div class="arc">
+                                <span class="text">Node.js</span>
+                                <input type="hidden" class="percent" value="70" />
+                                <input type="hidden" class="color" value="#f1c40f" />
+                            </div>
+                            <div class="arc">
+                                <span class="text">Java</span>
+                                <input type="hidden" class="percent" value="45" />
+                                <input type="hidden" class="color" value="#2980b9" />
+                            </div>
+                        	<div class="arc">
+                                <span class="text">C#</span>
+                                <input type="hidden" class="percent" value="20" />
+                                <input type="hidden" class="color" value="#bdc3c7" />
+                            </div>
+                            <div class="arc">
+                                <span class="text">Assembly</span>
+                                <input type="hidden" class="percent" value="15" />
+                                <input type="hidden" class="color" value="#e67e22" />
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h3>Linux</h3>
+                    	<h3>Operative Systems</h3>
+                        <h4>Linux</h4>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                             </div>
                         </div>
-                        <h3>Windows</h3>
+                        <h4>Windows</h4>
                         <div class="progress">
                             <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
                             </div>
@@ -157,21 +175,29 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <h3>Tools</h3>
                         <span class="label label-danger">Vim</span>
                         <span class="label label-danger">Git</span>
                         <span class="label label-danger">Nmap</span>
                         <span class="label label-danger">Ssh</span>
                         <span class="label label-danger">Screen</span>
+                        <span class="label label-danger">Gcc</span>
+                        <span class="label label-danger">NPM</span>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <h3>Libraries/Frameworks</h1>
                         <span class="label label-danger">OpenCV</span>
-                        <span class="label label-danger">MongoDB</span>
                         <span class="label label-danger">PDO</span>
                         <span class="label label-danger">Mongoose.js</span>
                         <span class="label label-danger">Express.js</span>
+						<span class="label label-danger">jQuery</span>
+                    </div>
+                    <div class="col-md-4">
+                    	<h3>Others</h3>
+                    	<span class="label label-danger">MongoDB</span>
+                    	<span class="label label-danger">Unit</span>
+                    	<span class="label label-danger">Pentesting</span>
                     </div>
                 </div>
             </div>
