--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                    	<h3>Operative Systems</h3>
+                    	<h3>Operating Systems</h3>
                         <h4>Linux</h4>
                         <div class="progress">
                             <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
