--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Domenico Luciani - Portfolio</title>
+        <title>Domenico Luciani</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -10,12 +10,6 @@
         <link href="css/home.css" rel="stylesheet" media="screen">
         <link href="css/about.css" rel="stylesheet" media="screen">
         <link href="css/skills.css" rel="stylesheet" media="screen">
-
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="../../assets/js/html5shiv.js"></script>
-          <script src="../../assets/js/respond.min.js"></script>
-        <![endif]-->
     </head>
     <body>
         <header>
@@ -28,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Domenico Luciani - Portfolio</a>
+            <a class="navbar-brand" href="#">Domenico Luciani</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
