--- a/index.html
+++ b/index.html
@@ -158,44 +158,70 @@
                     	<h3>Operating Systems</h3>
                         <h4>Linux</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                            </div>
+                            <div class="progress-bar progress-bar-success" id="plinux" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h4>Windows</h4>
                         <div class="progress">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-                            </div>
+                            <div class="progress-bar progress-bar-info" id="pwindows" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <h3>Tools</h3>
-                        <span class="label label-danger">Vim</span>
-                        <span class="label label-danger">Git</span>
-                        <span class="label label-danger">Nmap</span>
-                        <span class="label label-danger">Ssh</span>
-                        <span class="label label-danger">Screen</span>
-                        <span class="label label-danger">Gcc</span>
-                        <span class="label label-danger">NPM</span>
+                        <span class="label label-danger">vim</span>
+                        <span class="label label-danger">git</span>
+                        <span class="label label-danger">nmap</span>
+                        <span class="label label-danger">ssh</span>
+                        <span class="label label-danger">GNU/screen</span>
+                        <span class="label label-danger">gcc</span>
+                        <span class="label label-danger">npm</span>
                     </div>
                     <div class="col-md-4">
                         <h3>Libraries/Frameworks</h1>
-                        <span class="label label-danger">OpenCV</span>
-                        <span class="label label-danger">PDO</span>
-                        <span class="label label-danger">Mongoose.js</span>
-                        <span class="label label-danger">Express.js</span>
-						<span class="label label-danger">jQuery</span>
+                        <span class="label label-danger">opencv</span>
+                        <span class="label label-danger">pdo</span>
+                        <span class="label label-danger">mongoose.js</span>
+                        <span class="label label-danger">express.js</span>
+						<span class="label label-danger">jquery</span>
                     </div>
                     <div class="col-md-4">
                     	<h3>Others</h3>
-                    	<span class="label label-danger">MongoDB</span>
-                    	<span class="label label-danger">Unit</span>
-                    	<span class="label label-danger">Pentesting</span>
+                    	<span class="label label-danger">mongodb</span>
+                    	<span class="label label-danger">mysql</span>
+                    	<span class="label label-danger">unit</span>
+                    	<span class="label label-danger">pentest</span>
+                    	<span class="label label-danger">mitm</span>
+                    	<span class="label label-danger">bug hunting</span>
                     </div>
                 </div>
             </div>
         </div>
+        <div id="projects" class="page-alternate">
+        	 <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="title-page">
+                            <h2 class="title">Projects</h2>
+                            <h3 class="title-description">What I did</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                	<div class="col-md-6">
+                		<a href="#" class="thumbnail">
+      						<img src="http://placehold.it/700x200" alt="...">
+    					</a>
+                	</div>
+                	<div class="col-md-6">
+                		<p>
+                			Descrizione
+                		</p>
+                	</div>
+                </div>
+            </div>
+        </div>
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
