--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="img/pic.jpg"></img>
+                        <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="img/pic.jpg"/>
                     </div>
                     <div class="col-md-6 ">
                         <div id="hi">
@@ -178,7 +178,7 @@
                         <span class="label label-danger">npm</span>
                     </div>
                     <div class="col-md-4">
-                        <h3>Libraries/Frameworks</h1>
+                        <h3>Libraries/Frameworks</h3>
                         <span class="label label-danger">opencv</span>
                         <span class="label label-danger">pdo</span>
                         <span class="label label-danger">mongoose.js</span>
@@ -208,16 +208,39 @@
                     </div>
                 </div>
                 <div class="row">
-                	<div class="col-md-6">
-                		<a href="#" class="thumbnail">
-      						<img src="http://placehold.it/700x200" alt="...">
-    					</a>
-                	</div>
-                	<div class="col-md-6">
-                		<p>
-                			Descrizione
-                		</p>
-                	</div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://fakeimg.pl/439x230/" alt="Primo Progetto"/>
+                            <div class="caption">
+                                <h3 class="title">Exam Project</h3>
+                                <p>Bla bla bla bla bla bla bla</p>
+                                <p>Bla Bla Bla Bla Bla Bla Bla</p>
+                                <p>dkmdkfmdlmfdmfklmdkfmkmdmdlfm</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://fakeimg.pl/439x230/" alt="Secondo Progetto"/>
+                            <div class="caption">
+                                <h2 class="title">Node Blog</h2>
+                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
+                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
+                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://fakeimg.pl/439x230/" alt="Terzo Progetto"/>
+                            <div class="caption">
+                                <h2 class="title">OStega</h2>
+                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
+                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
+                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -231,6 +254,6 @@
         <!-- My Skills Options file !-->
         <script src="js/skills.js" type="text/javascript"></script>
         <!-- Maim javascript Function !-->
-        <script src="js/main.js" type"text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
     </body>
 </html>
