--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
+---
+title: Domenico Luciani | DLion ~ About Me
+---
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Domenico Luciani</title>
+      <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
-        <link href="css/page.css" rel="stylesheet" media="screen">
-        <link href="css/home.css" rel="stylesheet" media="screen">
-        <link href="css/about.css" rel="stylesheet" media="screen">
-        <link href="css/skills.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/home.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/about.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/skills.css" rel="stylesheet" media="screen">
     </head>
     <body>
         <header>
@@ -22,16 +26,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Domenico Luciani</a>
+            <a class="navbar-brand" href="#">{{ page.title }}</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
                 <li><a href="#social">Social</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#blog">Blog</a></li>
             </ul>
         </div>
         </nav>
@@ -40,7 +44,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="img/pic.jpg"/>
+                      <img id="pic-me" class="img-responsive img-img-rounded" alt="me" src="{{site.url}}/public/img/pic.jpg"/>
                     </div>
                     <div class="col-md-6 ">
                         <div id="hi">
@@ -198,7 +202,7 @@
             </div>
         </div>
         <div id="projects" class="page-alternate">
-        	 <div class="container">
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="title-page">
@@ -242,18 +246,53 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://fakeimg.pl/439x230/" alt="Primo Progetto"/>
+                            <div class="caption">
+                                <h3 class="title">Exam Project</h3>
+                                <p>Bla bla bla bla bla bla bla</p>
+                                <p>Bla Bla Bla Bla Bla Bla Bla</p>
+                                <p>dkmdkfmdlmfdmfklmdkfmkmdmdlfm</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://fakeimg.pl/439x230/" alt="Secondo Progetto"/>
+                            <div class="caption">
+                                <h2 class="title">Node Blog</h2>
+                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
+                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
+                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail">
+                            <img src="http://fakeimg.pl/439x230/" alt="Terzo Progetto"/>
+                            <div class="caption">
+                                <h2 class="title">OStega</h2>
+                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
+                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
+                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="js/jquery.min.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/jquery.min.js" type="text/javascript"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- Skill Javascript Library !-->
-        <script src="js/raphael-min.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/raphael-min.js" type="text/javascript"></script>
         <!-- My Skills Options file !-->
-        <script src="js/skills.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/skills.js" type="text/javascript"></script>
         <!-- Maim javascript Function !-->
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="{{site.url}}/public/js/main.js" type="text/javascript"></script>
     </body>
 </html>
