--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ title: Domenico Luciani | DLion ~ About Me
         <link href="{{ site.url }}/public/css/home.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/about.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/skills.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/social.css" rel="stylesheet" media="screen">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -34,7 +36,6 @@ title: Domenico Luciani | DLion ~ About Me
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#social">Social</a></li>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#blog">Blog</a></li>
             </ul>
         </div>
@@ -180,6 +181,7 @@ title: Domenico Luciani | DLion ~ About Me
                         <span class="label label-danger">GNU/screen</span>
                         <span class="label label-danger">gcc</span>
                         <span class="label label-danger">npm</span>
+                        <span class="label label-danger">tmux</span>
                     </div>
                     <div class="col-md-4">
                         <h3>Libraries/Frameworks</h3>
@@ -187,7 +189,8 @@ title: Domenico Luciani | DLion ~ About Me
                         <span class="label label-danger">pdo</span>
                         <span class="label label-danger">mongoose.js</span>
                         <span class="label label-danger">express.js</span>
-						<span class="label label-danger">jquery</span>
+                        <span class="label label-danger">CodeIgniter</span>
+                        <span class="label label-danger">jquery</span>
                     </div>
                     <div class="col-md-4">
                     	<h3>Others</h3>
@@ -201,85 +204,35 @@ title: Domenico Luciani | DLion ~ About Me
                 </div>
             </div>
         </div>
-        <div id="projects" class="page-alternate">
+        <div id="social" class="page-alternate">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="title-page">
-                            <h2 class="title">Projects</h2>
-                            <h3 class="title-description">What I did</h3>
+                            <h2 class="title">Social</h2>
+                            <h3 class="title-description">Where you can find me</h3>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://fakeimg.pl/439x230/" alt="Primo Progetto"/>
-                            <div class="caption">
-                                <h3 class="title">Exam Project</h3>
-                                <p>Bla bla bla bla bla bla bla</p>
-                                <p>Bla Bla Bla Bla Bla Bla Bla</p>
-                                <p>dkmdkfmdlmfdmfklmdkfmkmdmdlfm</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://fakeimg.pl/439x230/" alt="Secondo Progetto"/>
-                            <div class="caption">
-                                <h2 class="title">Node Blog</h2>
-                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
-                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
-                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://fakeimg.pl/439x230/" alt="Terzo Progetto"/>
-                            <div class="caption">
-                                <h2 class="title">OStega</h2>
-                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
-                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
-                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://fakeimg.pl/439x230/" alt="Primo Progetto"/>
-                            <div class="caption">
-                                <h3 class="title">Exam Project</h3>
-                                <p>Bla bla bla bla bla bla bla</p>
-                                <p>Bla Bla Bla Bla Bla Bla Bla</p>
-                                <p>dkmdkfmdlmfdmfklmdkfmkmdmdlfm</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://fakeimg.pl/439x230/" alt="Secondo Progetto"/>
-                            <div class="caption">
-                                <h2 class="title">Node Blog</h2>
-                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
-                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
-                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://fakeimg.pl/439x230/" alt="Terzo Progetto"/>
-                            <div class="caption">
-                                <h2 class="title">OStega</h2>
-                                <p> jndknfjkdn fdkjf kjdjgk dfjndkfjgnjkdg kdfjgjj</p>
-                                <p> fjdnskfn djfndjfnjdkf jkdfbjdbfjkdnjkndjfnjdnjddkfnjkdn </p>
-                                <p>jndkdsfnjkdnfkjdf fdnkjdnf ndjkfnjdn fndn fjkdnj fndjfnjd</p>
-                            </div>
-                        </div>
-                    </div>
+                  <div class="col-md-2">
+                    <a href="https://github.com/DLion"><i class="fa fa-github-alt fa-5x"></i></a>
+                  </div>
+                  <div class="col-md-2">
+                    <a href="https://twitter.com/dlion92"><i class="fa fa-twitter fa-5x"></i></a>
+                  </div>
+                  <div class="col-md-2">
+                    <a href="http://www.linkedin.com/in/dlion"><i class="fa fa-linkedin fa-5x"></i></a>
+                  </div>
+                  <div class="col-md-2">
+                    <a href="skype:dlion92"><i class="fa fa-skype fa-5x"></i></a>
+                  </div>
+                  <div class="col-md-2">
+                    <a href="https://plus.google.com/u/0/+DomenicoLeoneLuciani"><i class="fa fa-google-plus fa-5x"></i></a>
+                  </div>
+                  <div class="col-md-2">
+                    <a href="https://www.facebook.com/dlion.smagen"><i class="fa fa-facebook fa-5x"></i></a>
+                  </div>
                 </div>
             </div>
         </div>
